gccida/g0/enqueue_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/enqueue_insn/src/expr.c:793:14: error: expected identifier or '('
 struct expr = cfun->expr; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/enqueue_insn/src/expr.c:796:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)var + 2), 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/enqueue_insn/src/obj/expr.o] Error 1
